----------
v6.1.0-git
----------

[mms] Fix regression in renaming mailboxes (Bug #12260).


-----------
v6.1.0beta2
-----------

[mms] Directly output image thumbnails via data URIs when possible.
[jan] Fix incorrect dependencies.


-----------
v6.1.0beta1
-----------

[mms] Add ability to create new flag directly from dynamic mailbox screen.
[mms] Implement 'refresh_time' preference in smartmobile view.
[mms] Add taphold message action menu to smartmobile mailbox page.
[mms] Add MongoDB driver for sentmail log storage.
[mms] Add IMAP cache specific purge action to the imap cache query script.
[mms] Add support for using SQL and NoSQL backends for IMAP/POP caching.
[mms] Add thumbnail generation for video attachments.
[mms] Convert Data URLs in a reply message into attachments so that compose
      attachment limits can be enforced (Bug #12167).
[mms] Allow attachments to be dragged/dropped from local filesystem on the
      dynamic compose page.
[mms] Hide browser generated file input widget for attachment upload in dynamic
      compose page.
[mms] Add attachment upload capability to smartmobile compose page.
[mms] Add HTML image/style blocking to smartmobile view.
[mms] Improved autocompleter in smartmobile compose view.
[mms] Add saving compose drafts in smartmobile view.
[mms] Rename 'compose_attach' hook as 'compose_attachment'.
[mms] Honor forward_default preference in smartmobile view.
[mms] Add PGP keylength configuration option (Request #12099).
[mjr] Expose the Maillog via the public API.
[mms] Better handling of flag change attempts when browser cached state
      (dynamic/smartmobile view) is different than the server state.
[mms] Move backend configuration parsing/retrieval to IMP_Imap_Config.
[mms] Spam reporting configuration has been moved to the backends file.
[mms] Support showing blocked Data URIs in HTML message data.
[mms] Add the 'mbox_acl' hook.
[mms] Move folder disabling configuration into the permissions system.