@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Display information to user if incorrect character set data is preventing a text part from being displayed.
 * [mms] Fix regression in renaming mailboxes (Bug #12260).
  </notes>
  <contents>
@@ -3165,6 +3166,7 @@
    <date>2013-05-14</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Display information to user if incorrect character set data is preventing a text part from being displayed.
 * [mms] Fix regression in renaming mailboxes (Bug #12260).
    </notes>
   </release>
